hard-gists/5baaf1d206cf5e81436d/run.log
=== Docker Run Log for 5baaf1d206cf5e81436d ===
Started at: Mi 29. Okt 16:14:00 CET 2025

[2025-10-29 16:14:00] START: Running container for 5baaf1d206cf5e81436d
[2025-10-29 16:14:01] SUCCESS: Container c7fc965eb35d1df3364f43f5bf4361cf858f918e6920c07b77db7ce7795db98b started for 5baaf1d206cf5e81436d
=== Container logs for 5baaf1d206cf5e81436d ===
  File "/snippet.py", line 62
    print image
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5baaf1d206cf5e81436d ===
[2025-10-29 16:14:03] INFO: Container c7fc965eb35d1df3364f43f5bf4361cf858f918e6920c07b77db7ce7795db98b has stopped
